# stelt

./: .gitattributes  .gitignore  Cargo.toml  README.md  compile.sh  grammar  main.st  oldtest.st  print.st  reading-list.txt  roadmap.md  test.sh  test.st  todo.txt
.cargo/: config.toml
asm/: syscall.nasm
ideas/: buffers.st  data.st  exhaustiveness.txt  ffi.st  grammar.bnf  hmmm.ext  iter.st  lang.st  loops.txt  macros.st  memory_safety.txt  mutable-static.txt  ownership.txt  parallel.st  putd.st  signals.st  streams.st  string.st  test.st  traits.stelt
progs/: fib-fast.st  hello.st  helloworld.st  knapsack.st  lisp.st  sum.st
src/: ast.rs  builtin.rs  (+15 more)
steltc/: .gitignore  Cargo.toml  README.md  a.st  check.txt  compile.sh  main.st  prelude.st  run_tests
steltc/asm/: rc.c
steltc/docs/: grammar.bnf  tokens.txt
steltc/rewrite/src/: lexer.st  tokens.st
steltc/src/: codegen.rs  error.rs  lexer.rs  lib.rs  lir.rs  llvm.rs  main.rs  mir.rs  parse_tree.rs  parser.rs  pprint.rs  prelude.st  resolve.rs  type_checker.rs  unify.rs
steltc/tests/: parse.rs
steltc/tests/hello/: main.st  spec.json
steltc/tests/impl_eq/: prelude.st  spec.json
steltc/tests/import_generic/: main.st  other.st  prelude.st  spec.json
steltc/tests/lexer/: all.st  bad01.st
steltc/tests/parser/: bad01.st  chained_postfix.st
steltc/tests/peano/: main.st
steltc/tests/stub/: main.st
steltc/tests/sumsquare/: main.st  spec.json
steltc/tests/test_progs/: fib_fast.st  fib_naive.st  hello.st  hello_call.st  lisp.st  map_sum.st
steltc/tests/type_checker/: bad_chained_members.st
(+28 files in other folders)
