[package]
name = "stelt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
lazy_static = "*"
#inkwell = { version = "0.1", features = ["llvm15-0"] }
rand = "*"
termcolor = "1.2"
